[project]
name = "paw-health-api"
version = "0.1.0"
description = "Proactive Veterinary Management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pandas>=3.0.2",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.24",
    "requests>=2.33.1",
    "sqlmodel>=0.0.22",
    "streamlit>=1.56.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
